--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,27 @@
+# This is a basic workflow to help you get started with Actions
 name: CI
 
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: ['main']
+    branches: ["main", "cl"]
   pull_request:
-    branches: ['main']
+    branches: ["main", "cl"]
 
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
       - name: Install deps
@@ -23,7 +32,8 @@ jobs:
           wget -q $(curl 'https://api.github.com/repos/be5invis/Sarasa-Gothic/releases' | jq -r '.[0].assets | map(.browser_download_url) | map(select(test("sarasa-gothic-ttf-[0-9.]+\\.7z"))) | .[0]')
           7zr x sarasa-gothic-ttf-*.7z
           mkdir sarasa
-          mv sarasa-term-sc-*.ttf sarasa
+          mv sarasa-term-cl-*.ttf sarasa
+ 
 
       - name: Download Font Patcher
         run: |
@@ -40,23 +50,32 @@ jobs:
       - name: Upload ttc.7z
         uses: actions/upload-artifact@v3
         with:
-          name: sarasa-term-sc-nerd.ttc.7z
-          path: sarasa-nerd/sarasa-term-sc-nerd.ttc.7z
+          name: sarasa-term-cl-nerd.ttc.7z
+          path: sarasa-nerd/sarasa-term-cl-nerd.ttc.7z
 
       - name: Upload ttf.7z
         uses: actions/upload-artifact@v3
         with:
-          name: sarasa-term-sc-nerd.ttf.7z
-          path: sarasa-nerd/sarasa-term-sc-nerd.ttf.7z
+          name: sarasa-term-cl-nerd.ttf.7z
+          path: sarasa-nerd/sarasa-term-cl-nerd.ttf.7z
 
       - name: Upload ttc.tar.gz
         uses: actions/upload-artifact@v3
         with:
-          name: sarasa-term-sc-nerd.ttc.tar.gz
-          path: sarasa-nerd/sarasa-term-sc-nerd.ttc.tar.gz
+          name: sarasa-term-cl-nerd.ttc.tar.gz
+          path: sarasa-nerd/sarasa-term-cl-nerd.ttc.tar.gz
 
       - name: Upload ttf.tar.gz
         uses: actions/upload-artifact@v3
         with:
-          name: sarasa-term-sc-nerd.ttf.tar.gz
-          path: sarasa-nerd/sarasa-term-sc-nerd.ttf.tar.gz
+          name: sarasa-term-cl-nerd.ttf.tar.gz
+          path: sarasa-nerd/sarasa-term-cl-nerd.ttf.tar.gz
+
+      - name: Build Gothic and UI TTC
+        run: bash -xeu gothic.sh
+
+      - name: Upload gothic.7z
+        uses: actions/upload-artifact@v3
+        with:
+          name: gothic.7z
+          path: gothic.7z
