--- a/scripts/build
+++ b/scripts/build
@@ -39,14 +39,14 @@ done
 
 echo "generating ttc from ttf"
 cd "$root_dir"
-python otf2otc.py -o $sarasa_nerd_dir/sarasa-term-sc-nerd.ttc $sarasa_nerd_dir/sarasa-term-sc-nerd-*.ttf
+python otf2otc.py -o $sarasa_nerd_dir/sarasa-term-cl-nerd.ttc $sarasa_nerd_dir/sarasa-term-cl-nerd-*.ttf
 cd "$sarasa_nerd_dir"
 echo "creating tarball of ttf files"
-COPYFILE_DISABLE=1 tar -czvf sarasa-term-sc-nerd.ttf.tar.gz sarasa-term-sc-*.ttf
+COPYFILE_DISABLE=1 tar -czvf sarasa-term-cl-nerd.ttf.tar.gz sarasa-term-cl-*.ttf
 echo "creating tarball of ttc files"
-COPYFILE_DISABLE=1 tar -czvf sarasa-term-sc-nerd.ttc.tar.gz sarasa-term-sc-*.ttc
+COPYFILE_DISABLE=1 tar -czvf sarasa-term-cl-nerd.ttc.tar.gz sarasa-term-cl-*.ttc
 echo "creating 7zip of ttc files"
-7zr a -mx9 sarasa-term-sc-nerd.ttc.7z sarasa-term-sc-*.ttc
+7zr a -mx9 sarasa-term-cl-nerd.ttc.7z sarasa-term-cl-*.ttc
 echo "creating 7zip of ttf files"
-7zr a -mx9 sarasa-term-sc-nerd.ttf.7z sarasa-term-sc-*.ttf
+7zr a -mx9 sarasa-term-cl-nerd.ttf.7z sarasa-term-cl-*.ttf
 cd "$root_dir"
